--- a/Dag1-begreperFilosofi/4-FailFast_readErrors.ipynb
+++ b/Dag1-begreperFilosofi/4-FailFast_readErrors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c3506722",
+   "id": "99236afb",
    "metadata": {},
    "source": [
     "# Ikke vær redd for errors og rødt"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8f01c0b",
+   "id": "1c54e11c",
    "metadata": {},
    "source": [
     "- Hva kan vi lære av dem?\n",
@@ -20,7 +20,30 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "49aaf09b",
+   "id": "22f59d76",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-bc757c3fda29>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "# Dette har aldri gått an\n",
+    "1 / 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d75cb841",
    "metadata": {},
    "outputs": [
     {
@@ -40,8 +63,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "d0c88151",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if None:\n",
+    "# Her burde vi gått inn ett hakk egentlig\n",
+    "    print(\"If None burde aldri utløses\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6567a942",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-e7debc032340>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-e7debc032340>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 1:\n",
+    "    ...\n",
+    "x = 1\n",
+    "# Hvilken blokk hører denne elsen til?\n",
+    "else:\n",
+    "    ..."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
-   "id": "2b30de05",
+   "id": "efcdb709",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3c895fd8",
+   "id": "3a29b6a0",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b3184de1",
+   "id": "d748f9ba",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0427b426",
+   "id": "581543ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bfd44af7",
+   "id": "60497e4f",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cc5e2ee3",
+   "id": "063fdb82",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "172dfe2c",
+   "id": "85a0e67e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "39e467f9",
+   "id": "dceef122",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "7ef8d43e",
+   "id": "a2a57022",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "064b4a13",
+   "id": "198bf6a0",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "8b637764",
+   "id": "fdd7e2f3",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a0e461e9",
+   "id": "31b48c78",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3af0087a",
+   "id": "be219663",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5c1b245b",
+   "id": "07249459",
    "metadata": {},
    "outputs": [
     {
@@ -455,9 +514,182 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3497d6e",
+   "metadata": {},
+   "source": [
+    "### Bonus: Lag din egen error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "611848aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Javel, så det er en sånn dag",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-6e8bad7c9683>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Javel, så det er en sånn dag\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: Javel, så det er en sånn dag"
+     ]
+    }
+   ],
+   "source": [
+    "raise ValueError(\"Javel, så det er en sånn dag\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5566a83b",
+   "metadata": {},
+   "source": [
+    "https://www.programiz.com/python-programming/exceptions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cce23e2b",
+   "metadata": {},
+   "source": [
+    "<table border=\"0\">\n",
+    "\t\t<tbody>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<th>Exception</th>\n",
+    "\t\t\t\t<th>Cause of Error</th>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>AssertionError</code></td>\n",
+    "\t\t\t\t<td>Raised when an <code>assert</code> statement fails.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>AttributeError</code></td>\n",
+    "\t\t\t\t<td>Raised when attribute assignment or reference fails.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>EOFError</code></td>\n",
+    "\t\t\t\t<td>Raised when the <code>input()</code> function hits end-of-file condition.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>FloatingPointError</code></td>\n",
+    "\t\t\t\t<td>Raised when a floating point operation fails.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>GeneratorExit</code></td>\n",
+    "\t\t\t\t<td>Raise when a generator's <code>close()</code> method is called.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>ImportError</code></td>\n",
+    "\t\t\t\t<td>Raised when the imported module is not found.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>IndexError</code></td>\n",
+    "\t\t\t\t<td>Raised when the index of a sequence is out of range.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>KeyError</code></td>\n",
+    "\t\t\t\t<td>Raised when a key is not found in a dictionary.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>KeyboardInterrupt</code></td>\n",
+    "\t\t\t\t<td>Raised when the user hits the interrupt key (<code>Ctrl+C</code> or <code>Delete</code>).</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>MemoryError</code></td>\n",
+    "\t\t\t\t<td>Raised when an operation runs out of memory.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>NameError</code></td>\n",
+    "\t\t\t\t<td>Raised when a variable is not found in local or global scope.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>NotImplementedError</code></td>\n",
+    "\t\t\t\t<td>Raised by abstract methods.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>OSError</code></td>\n",
+    "\t\t\t\t<td>Raised when system operation causes system related error.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>OverflowError</code></td>\n",
+    "\t\t\t\t<td>Raised when the result of an arithmetic operation is too large to be represented.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>ReferenceError</code></td>\n",
+    "\t\t\t\t<td>Raised when a weak reference proxy is used to access a garbage collected referent.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>RuntimeError</code></td>\n",
+    "\t\t\t\t<td>Raised when an error does not fall under any other category.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>StopIteration</code></td>\n",
+    "\t\t\t\t<td>Raised by <code>next()</code> function to indicate that there is no further item to be returned by iterator.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>SyntaxError</code></td>\n",
+    "\t\t\t\t<td>Raised by parser when syntax error is encountered.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>IndentationError</code></td>\n",
+    "\t\t\t\t<td>Raised when there is incorrect indentation.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>TabError</code></td>\n",
+    "\t\t\t\t<td>Raised when indentation consists of inconsistent tabs and spaces.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>SystemError</code></td>\n",
+    "\t\t\t\t<td>Raised when interpreter detects internal error.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>SystemExit</code></td>\n",
+    "\t\t\t\t<td>Raised by <code>sys.exit()</code> function.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>TypeError</code></td>\n",
+    "\t\t\t\t<td>Raised when a function or operation is applied to an object of incorrect type.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>UnboundLocalError</code></td>\n",
+    "\t\t\t\t<td>Raised when a reference is made to a local variable in a function or method, but no value has been bound to that variable.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>UnicodeError</code></td>\n",
+    "\t\t\t\t<td>Raised when a Unicode-related encoding or decoding error occurs.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>UnicodeEncodeError</code></td>\n",
+    "\t\t\t\t<td>Raised when a Unicode-related error occurs during encoding.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>UnicodeDecodeError</code></td>\n",
+    "\t\t\t\t<td>Raised when a Unicode-related error occurs during decoding.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>UnicodeTranslateError</code></td>\n",
+    "\t\t\t\t<td>Raised when a Unicode-related error occurs during translating.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>ValueError</code></td>\n",
+    "\t\t\t\t<td>Raised when a function gets an argument of correct type but improper value.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td><code>ZeroDivisionError</code></td>\n",
+    "\t\t\t\t<td>Raised when the second operand of division or modulo operation is zero.</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t</tbody>\n",
+    "\t</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4281dad5",
+   "id": "614e5687",
    "metadata": {},
    "outputs": [],
    "source": []
