--- a/Dag1-begreperFilosofi/5-Dokumentasjon_FinneTolke.ipynb
+++ b/Dag1-begreperFilosofi/5-Dokumentasjon_FinneTolke.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a4b74d40",
+   "id": "9a3531ff",
    "metadata": {},
    "source": [
     "### Google!"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38b9aba4",
+   "id": "0504c32e",
    "metadata": {},
    "source": [
     "https://www.google.com/search?q=pandas+dataframe"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "235dd37c",
+   "id": "c74d07fd",
    "metadata": {},
    "source": [
     "### Stack overflow FTW"
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41eb1c6d",
+   "id": "ff72a9c2",
    "metadata": {},
    "source": [
-    "Hvor spesifikk er du, og hvor mange begreper har du?\\\n",
-    "https://www.google.com/search?q=pandas+concating+dataframes+with+category+columns"
+    "Hvor spesifikk er du, og hvor mange begreper kan du?\\\n",
+    "https://www.google.com/search?q=pandas+concatenate+dataframes+with+category+columns"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ebbf4746",
+   "id": "476fd0da",
    "metadata": {},
    "source": [
     "### Kvaliteten på pakkens egen dokumentasjon varierer :/"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0569026",
+   "id": "aacda882",
    "metadata": {},
    "source": [
     "Pandas sin er <u>svært god</u>\\\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0522d773",
+   "id": "c13b0deb",
    "metadata": {},
    "source": [
     "Andre kan hende kun har \"readme\" på github?\\\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19bca66f",
+   "id": "33cac329",
    "metadata": {},
    "source": [
     "### Rekkefølge på lesing? Ikke alltid fra topp til bunn?"
@@ -74,7 +74,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "01e268c7",
+   "id": "81ff59a4",
    "metadata": {},
    "source": [
     "![image.png](attachment:8b8cbbef-5ba2-489b-be16-4ed9b7b29a8e.png)"
@@ -87,7 +87,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b953fa2f",
+   "id": "fd1f1edb",
    "metadata": {},
    "source": [
     "![image.png](attachment:40fe997b-dc25-4eb8-92f2-99a14d9979e2.png)"
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40453ac6",
+   "id": "2ab1ebe9",
    "metadata": {},
    "outputs": [],
    "source": []
