--- a/Dag1-begreperFilosofi/_Dagsplan_Praktisk.ipynb
+++ b/Dag1-begreperFilosofi/_Dagsplan_Praktisk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa1a66e0",
+   "id": "eb47d150",
    "metadata": {},
    "source": [
     "### Kursstruktur\n",
@@ -22,15 +22,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37fb2dfe",
+   "id": "63e9037a",
    "metadata": {},
    "source": [
-    "### Hvordan få dette \"repoet\" med kode-eksempler inn i \"din jupyter\"?"
+    "### Mål før kursdag2: Få dette \"repoet\" med kode-eksempler inn i \"din jupyter\" på Dapla"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21b456f0",
+   "id": "f3a6523c",
    "metadata": {},
    "source": [
     "- \"Stå i rett mappe\" på dapla\n",
@@ -42,17 +42,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e101f8d1",
+   "cell_type": "markdown",
+   "id": "f376c4c8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### De som ikke får til dette, ta kontakt med oss utenfor kursstid så skal vi hjelpe til med å få det opp"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5eca2f5",
+   "id": "6b3e6f19",
    "metadata": {},
    "outputs": [],
    "source": []
