--- a/Dag2-miljo/_Dagsplan_miljo.ipynb
+++ b/Dag2-miljo/_Dagsplan_miljo.ipynb
@@ -1,9 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3167da88",
+   "metadata": {},
+   "source": [
+    "- Orientering i Jupyter notebooks, kernels, code & markdown, shortcuts & autocomplete\n",
+    "- Hente kode-eksempler fra github (clone) (helt-python, dapla-veileder, idea-repository, annet?)\n",
+    "- “Time to first plot” - demo fra datasett til plot\n",
+    "- Datainnlasting i prodsonen versus dapla\n",
+    "- Hvordan komme igang med eget produksjonsløp? Sette i gang med verdivurdering av utvalgte statistikker for å komme på dapla?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99f7899b",
+   "id": "332919f7",
    "metadata": {},
    "outputs": [],
    "source": []
