Quiz dag1 og dag2

--- a/Dag1-begreperFilosofi/6-Diskusjon.ipynb
+++ b/Dag1-begreperFilosofi/6-Diskusjon.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ec08358e",
+   "id": "c73e6a88",
    "metadata": {},
    "source": [
     "### Hva ønsker dere å se gjort i Python?\n",
     "\n",
     "- Microeditering / Excel?\n",
-    "- API Klass og Statbank"
+    "- API Klass og Statbank\n",
+    "\n",
+    "Vi kommer til å begynne å plassere slik i \"senere\"-mappa i dette repoet."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3175fabc",
+   "id": "a07ec63a",
    "metadata": {},
    "source": [
     "### Hvilke typer prosjekt og data skal dere jobbe på?\n",
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ddc781d",
+   "id": "da970465",
    "metadata": {},
    "source": [
     "### Bruker vi samme begreper om de samme prosessene?\n",
@@ -31,17 +33,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "550b361f",
+   "id": "d108a930",
    "metadata": {},
    "source": [
     "### Lekser? \n",
-    "Se videoer på starten av neste ark?"
+    "- Få inn dette repoet i din dapla, om du ikke har gjort det enda\n",
+    "- Ta quiz (ark 7)\n",
+    "- Se videoer på starten av ark1 i dag2-mappa"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bda60473",
+   "id": "6c7f431a",
    "metadata": {},
    "outputs": [],
    "source": []
