--- a/Dag1-begreperFilosofi/_Dagsplan_Praktisk.ipynb
+++ b/Dag1-begreperFilosofi/_Dagsplan_Praktisk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eb47d150",
+   "id": "52730f43",
    "metadata": {},
    "source": [
     "### Kursstruktur\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63e9037a",
+   "id": "023053bb",
    "metadata": {},
    "source": [
     "### Mål før kursdag2: Få dette \"repoet\" med kode-eksempler inn i \"din jupyter\" på Dapla"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a6523c",
+   "id": "df7490e9",
    "metadata": {},
    "source": [
     "- \"Stå i rett mappe\" på dapla\n",
@@ -43,19 +43,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f376c4c8",
+   "id": "8ecc965a",
    "metadata": {},
    "source": [
-    "#### De som ikke får til dette, ta kontakt med oss utenfor kursstid så skal vi hjelpe til med å få det opp"
+    "#### De som ikke får til dette, ta kontakt med oss utenfor kursstid så skal vi hjelpe til med å få det opp.\n",
+    "(Lekse til i morgen)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b3e6f19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
