--- a/Dag2-miljo/_Dagsplan_miljo.ipynb
+++ b/Dag2-miljo/_Dagsplan_miljo.ipynb
@@ -2,20 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3167da88",
+   "id": "f285e8fb",
    "metadata": {},
    "source": [
-    "- Orientering i Jupyter notebooks, kernels, code & markdown, shortcuts & autocomplete\n",
-    "- Hente kode-eksempler fra github (clone) (helt-python, dapla-veileder, idea-repository, annet?)\n",
-    "- “Time to first plot” - demo fra datasett til plot\n",
-    "- Datainnlasting i prodsonen versus dapla\n",
-    "- Hvordan komme igang med eget produksjonsløp? Sette i gang med verdivurdering av utvalgte statistikker for å komme på dapla?"
+    "# Dag2 - \"Miljø\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6468513a",
+   "metadata": {},
+   "source": [
+    "1. Orientering i Jupyter notebooks, kernels, code & markdown, shortcuts & autocomplete\n",
+    "1. Hente kode-eksempler fra github (clone) (helt-python, dapla-veileder, idea-repository, annet?)\n",
+    "1. “Time to first plot” - demo fra datasett til plot\n",
+    "1. Datainnlasting i prodsonen versus dapla\n",
+    "1. Hvordan komme igang med eget produksjonsløp? Sette i gang med verdivurdering av utvalgte statistikker for å komme på dapla?\n",
+    "1. Grunnleggende Git-kommandoer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "332919f7",
+   "id": "1ec8807d",
    "metadata": {},
    "outputs": [],
    "source": []
