--- a/Dag2-miljo/1-JupyterNotebooks.ipynb
+++ b/Dag2-miljo/1-JupyterNotebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39bdd5f3",
+   "id": "b8c1cd99",
    "metadata": {},
    "source": [
     "# Videohjelp"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d3714c4c",
+   "id": "c71ac402",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baa1fba1",
+   "id": "a3bcf222",
    "metadata": {},
    "source": [
     "### Helt grunnleggende oppstart på dapla"
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6728931f",
+   "execution_count": 2,
+   "id": "ccd9458b",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -50,10 +50,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fc7c00ae6d0>"
+       "<IPython.lib.display.IFrame at 0x7f2b34394dc0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb44e67b",
+   "id": "db8393e5",
    "metadata": {},
    "source": [
     "### Video: JupyterGUI"
@@ -74,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "378a5114",
+   "execution_count": 3,
+   "id": "946f9280",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -96,10 +96,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fc7c00c3cd0>"
+       "<IPython.lib.display.IFrame at 0x7f2b34394c10>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e53ab94",
+   "id": "65dd8358",
    "metadata": {},
    "source": [
     "### Video: 7 tips og triks i Jupyter\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "38173c78",
+   "id": "fc42cf97",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11749689",
+   "id": "188b26b4",
    "metadata": {},
    "source": [
     "<hr>"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39579224",
+   "id": "f27d2aad",
    "metadata": {},
    "source": [
     "# Jupyter som miljø\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cec2a843",
+   "id": "4854aae0",
    "metadata": {},
    "source": [
     "### Mappe-struktur - \"hvor\" er lagringen din?"
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64e5e25b",
+   "id": "c5203e9c",
    "metadata": {},
    "source": [
     "### Kun det viktigste fra menyer i topp og venstre i Jupyter\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff1f4490",
+   "id": "7f1a3757",
    "metadata": {},
    "source": [
     "### Hva er en kernel, og hvorfor har vi flere typer?"
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34b8b054",
+   "id": "67c58daf",
    "metadata": {},
    "source": [
     "Frivillig video om å kjøre R fra Python med papermill:\\\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0308f18",
+   "id": "57254160",
    "metadata": {},
    "source": [
     "### Hub Control Panel - Din egen \"Server\" - Dette skjer i skyen"
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05b1601f",
+   "id": "1f190f05",
    "metadata": {},
    "source": [
     "<hr>"
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa72927",
+   "id": "c55b4bd8",
    "metadata": {},
    "source": [
     "# Arbeid i Notebooks\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1182dfd7",
+   "id": "96b30f81",
    "metadata": {},
    "source": [
     "### Command og Edit-kontekst"
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "60f5ce02",
+   "id": "a262d6d4",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01149d59",
+   "id": "5ae97ded",
    "metadata": {},
    "source": [
     "### Mest brukte hotkeys / shortcuts"
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aaa9910",
+   "id": "3312693b",
    "metadata": {},
    "source": [
     "- Esc - for å ut av en celle til \"command mode\"\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8bdc495",
+   "id": "820b0acb",
    "metadata": {},
    "source": [
     "- ctrl + enter   - Kjør cellen du står i\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04061ae9",
+   "id": "e66e35b3",
    "metadata": {},
    "source": [
     "- m - konverter cellen til markdown\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff4789c",
+   "id": "0d94fa5f",
    "metadata": {},
    "source": [
     "I commandmode:\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b938a15",
+   "id": "fed0a5d2",
    "metadata": {},
    "source": [
     "- tab - indent/autocomplete\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7d7b3f9e",
+   "id": "c17ae227",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "324ef9d5",
+   "id": "2d1ab499",
    "metadata": {},
    "source": [
     "### Alt-drag"
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c623ea48",
+   "id": "e7cecbcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46a0a595",
+   "id": "ae862315",
    "metadata": {},
    "source": [
     "### Legg til bilder i markdown"
@@ -403,7 +403,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "c506350f",
+   "id": "75cbeafb",
    "metadata": {},
    "source": [
     "![image.png](attachment:2db72dec-b096-449f-a454-37ac757d91da.png)"
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf6964f4",
+   "id": "cf6be574",
    "metadata": {},
    "source": [
     "### Shift tab for dokumentasjon, tab (inni ett ord) for autocomplete"
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6e322613",
+   "id": "8664ec5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31fec73d",
+   "id": "92e3515a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1ce34060",
+   "id": "2368e853",
    "metadata": {},
    "outputs": [],
    "source": [
