--- a/Dag2-miljo/1-JupyterNotebooks.ipynb
+++ b/Dag2-miljo/1-JupyterNotebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8c1cd99",
+   "id": "829ff903",
    "metadata": {},
    "source": [
     "# Videohjelp"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c71ac402",
+   "id": "8bb3bc62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3bcf222",
+   "id": "0881cd44",
    "metadata": {},
    "source": [
     "### Helt grunnleggende oppstart på dapla"
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ccd9458b",
+   "id": "858136ac",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -50,7 +50,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f2b34394dc0>"
+       "<IPython.lib.display.IFrame at 0x7ff814564cd0>"
       ]
      },
      "execution_count": 2,
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db8393e5",
+   "id": "eddc4a5a",
    "metadata": {},
    "source": [
     "### Video: JupyterGUI"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "946f9280",
+   "id": "dd32d25e",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -96,7 +96,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f2b34394c10>"
+       "<IPython.lib.display.IFrame at 0x7ff81455a1c0>"
       ]
      },
      "execution_count": 3,
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65dd8358",
+   "id": "4ce8f08f",
    "metadata": {},
    "source": [
     "### Video: 7 tips og triks i Jupyter\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fc42cf97",
+   "id": "541e73d3",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "188b26b4",
+   "id": "faec52f0",
    "metadata": {},
    "source": [
     "<hr>"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f27d2aad",
+   "id": "52d0611a",
    "metadata": {},
    "source": [
     "# Jupyter som miljø\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4854aae0",
+   "id": "e5d57139",
    "metadata": {},
    "source": [
     "### Mappe-struktur - \"hvor\" er lagringen din?"
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5203e9c",
+   "id": "b54c85c0",
    "metadata": {},
    "source": [
     "### Kun det viktigste fra menyer i topp og venstre i Jupyter\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f1a3757",
+   "id": "0712accb",
    "metadata": {},
    "source": [
     "### Hva er en kernel, og hvorfor har vi flere typer?"
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c58daf",
+   "id": "acd72491",
    "metadata": {},
    "source": [
     "Frivillig video om å kjøre R fra Python med papermill:\\\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57254160",
+   "id": "930a07ed",
    "metadata": {},
    "source": [
     "### Hub Control Panel - Din egen \"Server\" - Dette skjer i skyen"
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f190f05",
+   "id": "e7d84bc7",
    "metadata": {},
    "source": [
     "<hr>"
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55b4bd8",
+   "id": "ad21f1c3",
    "metadata": {},
    "source": [
     "# Arbeid i Notebooks\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96b30f81",
+   "id": "3de6c290",
    "metadata": {},
    "source": [
     "### Command og Edit-kontekst"
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a262d6d4",
+   "id": "d4f7168f",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ae97ded",
+   "id": "39fb87f2",
    "metadata": {},
    "source": [
     "### Mest brukte hotkeys / shortcuts"
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3312693b",
+   "id": "1c80f394",
    "metadata": {},
    "source": [
     "- Esc - for å ut av en celle til \"command mode\"\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820b0acb",
+   "id": "35a680ec",
    "metadata": {},
    "source": [
     "- ctrl + enter   - Kjør cellen du står i\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e66e35b3",
+   "id": "1649edf9",
    "metadata": {},
    "source": [
     "- m - konverter cellen til markdown\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d94fa5f",
+   "id": "690bbf90",
    "metadata": {},
    "source": [
     "I commandmode:\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fed0a5d2",
+   "id": "62ea12a7",
    "metadata": {},
    "source": [
     "- tab - indent/autocomplete\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c17ae227",
+   "id": "bf3f6fbc",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d1ab499",
+   "id": "58468130",
    "metadata": {},
    "source": [
     "### Alt-drag"
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7cecbcb",
+   "id": "ca19466f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae862315",
+   "id": "9b2f1dfe",
    "metadata": {},
    "source": [
     "### Legg til bilder i markdown"
@@ -403,7 +403,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "75cbeafb",
+   "id": "c69156d7",
    "metadata": {},
    "source": [
     "![image.png](attachment:2db72dec-b096-449f-a454-37ac757d91da.png)"
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf6be574",
+   "id": "a6d34168",
    "metadata": {},
    "source": [
     "### Shift tab for dokumentasjon, tab (inni ett ord) for autocomplete"
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8664ec5f",
+   "id": "f7933c84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92e3515a",
+   "id": "5481ed73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2368e853",
+   "id": "4496c7fc",
    "metadata": {},
    "outputs": [],
    "source": [
