--- a/Dag2-miljo/8-quiz.ipynb
+++ b/Dag2-miljo/8-quiz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "230fe3da",
+   "id": "51f8ce14",
    "metadata": {},
    "source": [
     "# Kjør hele arket, så besvar spørsmålene med alternativene."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e56e71e5",
+   "id": "dc933b35",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "253dc439",
+   "id": "9e6494e8",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -69,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "026d332b",
+   "execution_count": 7,
+   "id": "7e88a353",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -80,7 +80,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe1ff53c85dd46c19fbc23f1671f9d4d",
+       "model_id": "8c226234679a4209a3db90a262d41f4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "Q2 = multchoice('Hva er shortcuten for auto-complete?',\n",
+    "Q2 = multchoice('Hva er shortcuten for auto-complete i Jupyter?',\n",
     "                    ['shift-enter',\n",
     "                     'dd, i command-modus',\n",
     "                     'tab, når du er inne i en kodeblokk',\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7bd266ee",
+   "id": "9e33c2a1",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a6562128",
+   "id": "6901c4bf",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8eb8f2f6",
+   "id": "e39392c8",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6450f4e",
+   "id": "775b2230",
    "metadata": {},
    "outputs": [],
    "source": []
