Omkoding med landsdeler fra KLASS

--- a/Dag3-pandas/4-Grupperingsvariabler.ipynb
+++ b/Dag3-pandas/4-Grupperingsvariabler.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4ee4423a",
+   "metadata": {},
+   "source": [
+    "### Lag grupperingsvariabler etter en inndeling av alder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5474e642",
+   "id": "cf34eae8",
    "metadata": {},
    "outputs": [],
    "source": []
