--- a/Dag3-pandas/_Dagsplan_Pandas.ipynb
+++ b/Dag3-pandas/_Dagsplan_Pandas.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "06a618b1",
+   "id": "47642ecf",
+   "metadata": {},
+   "source": [
+    "# Pandas og operasjoner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06d07773",
    "metadata": {},
    "source": [
     "- “kobling”\n",
@@ -16,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93259057",
+   "id": "af522ebf",
    "metadata": {},
    "outputs": [],
    "source": []
